# vexel-one

./: .env.example  .gitignore  README.md  VEXEL_GROUP_BIO.md  docker-compose.yml
.github/workflows/: ci-cd.yml
ai-services/: Dockerfile  requirements.txt
ai-services/app/: main.py
ai-services/app/api/: agents.py  assistant.py  expansion.py  instinct.py  office.py  sentient_api.py  surveillance.py  swarm.py  twin_sandbox.py
ai-services/app/core/: config.py
backend/: Dockerfile  package-lock.json  package.json  prisma.config.ts  vercel.json
backend/prisma/: plugins.prisma  schema.prisma
backend/src/: app.ts  server.ts
backend/src/config/: openai.ts  supabase.ts
backend/src/controllers/: auth.controller.ts
backend/src/middlewares/: auth.middleware.ts
backend/src/routes/: ai.routes.ts  office.routes.ts  security.routes.ts  workspace.routes.ts
backend/src/services/: healing.service.ts  profile.service.ts  simulator.service.ts  workflow.service.ts
desktop-app/: package.json
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: FarmsModule.tsx  SecurityModule.tsx
frontend/src/app/expansion/: page.tsx
frontend/src/app/industrial/: page.tsx
frontend/src/app/security/: page.tsx
k8s/: ai-service-deployment.yaml  backend-deployment.yaml
mobile-app/: App.tsx  package-lock.json  package.json
mobile-app/src/config/: supabase.ts
