[package]
name = "vexel-one-desktop"
version = "1.0.0"
description = "Vexel One Desktop App"
authors = ["Vexel Innovations"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
